--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,10 @@ minecraft_version=1.18.2
 yarn_mappings=1.18.2+build.4
 loader_version=0.16.9
 
+
 # Mod Properties
-mod_version=1.0.0
-maven_group=net.bnjax3.momomod
+mod_version=1.0.0-1.18.2
+maven_group=net.bnjax3
 archives_base_name=momomod
 
 # Dependencies
